kubernetes/starlette-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: starlette
  labels:
    name: starlette
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: starlette
    spec:
      containers:
      - name: starlette
        image: clelange/starlette-vue-kubernetes-server:latest
      restartPolicy: Always
